[gd_scene load_steps=24 format=3 uid="uid://bxxr4sj2tilxr"]

[ext_resource type="Texture2D" uid="uid://b74xi3phpbfag" path="res://sprites/Background  Grid.png" id="1_0mjvv"]
[ext_resource type="Script" path="res://scripts/Pong.gd" id="1_3ji6q"]
[ext_resource type="Script" path="res://scripts/PlayerPaddle.gd" id="2_qguop"]
[ext_resource type="Texture2D" uid="uid://b43s6qimbd8b1" path="res://sprites/Paddle_1.png" id="2_yc4p7"]
[ext_resource type="Script" path="res://scripts/EnemyPaddle.gd" id="4_0o8qm"]
[ext_resource type="Texture2D" uid="uid://dnprf684o7ny4" path="res://sprites/Paddle_2.png" id="4_60fsy"]
[ext_resource type="Script" path="res://scripts/Ball.gd" id="5_djx7i"]
[ext_resource type="Texture2D" uid="uid://ddhmmdxdhr3k4" path="res://sprites/Ball.png" id="5_jpaci"]
[ext_resource type="FontFile" uid="uid://b2knoj335ehtp" path="res://fonts/Micro5-Regular.ttf" id="9_0ccja"]
[ext_resource type="Script" path="res://addons/trail_2d/trail_2d.gd" id="9_lwrrq"]
[ext_resource type="Script" path="res://scripts/UIPoints.gd" id="10_qs5bw"]
[ext_resource type="AudioStream" uid="uid://c2vav60xut2kj" path="res://sounds/Bounce.sfxr" id="12_0jt1j"]
[ext_resource type="AudioStream" uid="uid://cvgub06rgvybk" path="res://sounds/Hit.sfxr" id="13_6fp17"]
[ext_resource type="AudioStream" uid="uid://dt3ogfaek4qea" path="res://sounds/Point.sfxr" id="14_e1n4e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lp7is"]
size = Vector2(1098, 83)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4j1qh"]
size = Vector2(1096, 85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lkg34"]
size = Vector2(93, 548)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7escb"]
size = Vector2(90, 548)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_onhsf"]
a = Vector2(8, -56)
b = Vector2(8, 57)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_1qghq"]
a = Vector2(8, -56)
b = Vector2(8, 57)

[sub_resource type="CircleShape2D" id="CircleShape2D_vfnxs"]

[sub_resource type="Curve" id="Curve_07ef1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_34il5"]
colors = PackedColorArray(1, 1, 1, 0.784314, 1, 1, 1, 0)

[node name="Pong" type="Node2D"]
script = ExtResource("1_3ji6q")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_0mjvv")
centered = false

[node name="TopWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2(640, 42.5)
shape = SubResource("RectangleShape2D_lp7is")

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2(0, 635)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2(639, 40.5)
shape = SubResource("RectangleShape2D_4j1qh")

[node name="LeftEdge" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftEdge"]
position = Vector2(44.5, 359)
shape = SubResource("RectangleShape2D_lkg34")
debug_color = Color(0.0745098, 0.368627, 0.996078, 0.419608)

[node name="RightEdge" type="Area2D" parent="."]
position = Vector2(1188, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightEdge"]
position = Vector2(46, 358)
shape = SubResource("RectangleShape2D_7escb")
debug_color = Color(0.968627, 0.27451, 0.960784, 0.419608)

[node name="PlayerPaddle" type="RigidBody2D" parent="." node_paths=PackedStringArray("ball")]
position = Vector2(130, 357)
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("2_qguop")
ball = NodePath("../Ball")

[node name="Sprite2D" type="Sprite2D" parent="PlayerPaddle"]
texture = ExtResource("2_yc4p7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerPaddle"]
shape = SubResource("SegmentShape2D_onhsf")

[node name="EnemyPaddle" type="RigidBody2D" parent="." node_paths=PackedStringArray("ball")]
position = Vector2(1151, 358)
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("4_0o8qm")
ball = NodePath("../Ball")

[node name="Sprite2D" type="Sprite2D" parent="EnemyPaddle"]
texture = ExtResource("4_60fsy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyPaddle"]
position = Vector2(-14, 0)
shape = SubResource("SegmentShape2D_1qghq")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(639, 357)
script = ExtResource("5_djx7i")
speed = 1000

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
texture = ExtResource("5_jpaci")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_vfnxs")

[node name="Trail2D" type="Line2D" parent="Ball"]
width = 17.0
width_curve = SubResource("Curve_07ef1")
gradient = SubResource("Gradient_34il5")
script = ExtResource("9_lwrrq")
length = 13

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="PlayerPoints" type="Label" parent="."]
offset_left = 539.0
offset_top = 120.0
offset_right = 611.0
offset_bottom = 219.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.168627, 0.372549, 0.560784, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("9_0ccja")
theme_override_font_sizes/font_size = 98
text = "0"
horizontal_alignment = 1
script = ExtResource("10_qs5bw")

[node name="EnemyPoints" type="Label" parent="."]
offset_left = 669.0
offset_top = 120.0
offset_right = 741.0
offset_bottom = 219.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.588235, 0.321569, 0.647059, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("9_0ccja")
theme_override_font_sizes/font_size = 98
text = "0"
horizontal_alignment = 1
script = ExtResource("10_qs5bw")

[node name="Bounce" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_0jt1j")

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_6fp17")

[node name="Point" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_e1n4e")

[connection signal="body_entered" from="LeftEdge" to="." method="_on_enemy_scored"]
[connection signal="body_entered" from="RightEdge" to="." method="_on_player_scored"]
[connection signal="timeout" from="Timer" to="." method="start_game"]
